--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "cloudinary": "^1.35.0",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^1.0.10",
     "react-dom": "^18.2.0",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.9.0",
