--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "mongoose": "^7.0.4",
     "multer": "^1.4.5-lts.1"
   }
 }
