--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,13 +11,20 @@
     "antd": "^5.3.3",
     "axios": "^1.3.4",
     "cloudinary": "^1.35.0",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^5.0.0",
+    "quill-blot-formatter": "^1.0.5",
+    "quill-image-resize-module": "^3.0.0",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^1.0.10",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
+    "react-quilljs": "^1.3.3",
     "react-router": "^6.10.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
