--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@mojs/core": "^1.5.1",
     "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-query-devtools": "^4.29.12",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.3",
     "axios": "^1.3.4",
+    "canvasjs": "^1.8.3",
     "cloudinary": "^1.35.0",
     "emailjs-com": "^3.2.0",
     "gh-pages": "^5.0.0",
@@ -20,6 +22,7 @@
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^1.0.10",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-quill": "^2.0.0",
     "react-quilljs": "^1.3.3",
     "react-router": "^6.10.0",
