--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,8 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "react-table": "^7.8.0",
+    "react-tooltip": "^5.19.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
